whoami/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-tls-ingress
  annotations:
    spec.ingressClassName: traefik
spec:
  rules:
    - host: whoami.erix-homelab.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 5678
  tls:
    - secretName: erix-homelab-site-tls
      hosts:
        - whoami.erix-homelab.site
